<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_288"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/main_white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="vertical">

        <!--时效性-->
        <LinearLayout
            android:id="@+id/ll_timeliness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:text="@string/str_smart_timeliness"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/sp_20" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_time_lines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="12dp"
                tools:itemCount="2" />

        </LinearLayout>

        <!--施行日期-->
        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:text="@string/str_smart_effective_date"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/sp_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_32"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/shape_stroke_gray_4"
                android:drawableLeft="@drawable/iv_select_date"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:hint="选择日期"
                android:paddingStart="@dimen/dp_10"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_s"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--分类-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:minHeight="@dimen/dp_28"
                android:text="@string/str_smart_classification"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/sp_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--切换分类-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_switch_classification"
                style="@style/text_16_blue_wrap_style"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:layout_marginEnd="@dimen/dp_16"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:minHeight="@dimen/dp_28"
                android:text="@string/str_smart_toggle"
                app:drawableStartCompat="@drawable/iv_switch_blue"
                app:layout_constraintBottom_toBottomOf="@id/tv_classification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_classification" />

            <View
                android:id="@+id/view_classification_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/border_color_general"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_classification" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_classification_line" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/view_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#E5E6EB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10">
            <!--取消按钮-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_negative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_28"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/shape_btn_gray_bg_6"
                android:gravity="center"
                android:text="@string/str_smart_reset"
                android:textColor="#1D2129"
                android:textSize="@dimen/sp_14" />


            <!--确定按钮-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_positive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_28"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_weight="1"
                android:background="@drawable/shape_btn_blue_bg_6"
                android:gravity="center"
                android:text="@string/confirm1"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

